public enum AnimalState
{
    IDLE, EATING, SLEEPING, HUNTING, FLEEING
}