@startuml

namespace Lesson_6{
    class AnimalPen <<MonoBehaviour>>{
        + List<Animal> Animals
        + void SpawnAnimals(List<GameObject> anims)
    }

    class Player <<MonoBehaviour>>{
        + FriendlyAnimal SelectedAnimal
        + GameObject Arm
        + GameObject Wrist
        + GameObject Hand
        # void Update()
    }

    class Arm{
        + void OnCollisionEnter(Collision collision)
    }

    class Wrist{
        
    }

    class Hand{
        + void OnCollisionEnter(Collision collision)
    }

    Player -- Arm
    Arm -- Wrist
    Wrist -- Hand

    class Zoo <<MonoBehaviour>>{
        + List<GameObject> AnimalPrefabs
        + GameObject AnimalPenPrefab
        + List<AnimalPen> Pens
        + List<Animal> AllAnimals
        # void Start()
        - AnimalPen Spawner(int counter)
    }

    namespace Animals{
        enum AnimalState{
            IDLE
            EATING
            SLEEPING
            HUNTING
            FLEEING
        }

        abstract class Animal <<MonoBehaviour>>{
            + float speed = 1.0f
            + float IdleArea = 25.0f
            + bool Busy = false;
            # Vector3 IdleCenter;
            # AnimalState CurrentState
        }

        abstract class FriendlyAnimal{
            + AnimalPen Pen
            + void OnMouseDown()
            + void OnCollisionEnter(Collision collision)
        }

        abstract class HostileAnimal{

        }

        interface IFriendlyAnimal{
            + void OnMouseDown()
        }

        interface IHostileAnimal{

        }

        class Cat{
            # void Update()
            + void OnMouseDown()
        }

        class Pig{
            # void Update()
            - IEnumerator LerpMovement(Vector3 to)
        }

        class Wolf{

        }

        FriendlyAnimal -up-|> Animal
        FriendlyAnimal -up-|> IFriendlyAnimal
        HostileAnimal -up-|> Animal
        HostileAnimal -up-|> IHostileAnimal
        Wolf -up-|> HostileAnimal
        Cat -up-|> FriendlyAnimal
        Pig -up-|> FriendlyAnimal
        Animal *-- AnimalState : State
    }

    Player "1" ..> "1..*" Lesson_6.Animals.Animal : Interacts with
    AnimalPen "1" *-- "*" Lesson_6.Animals.Animal : Contains
    Zoo "1" *-- "*"  AnimalPen : Contains
    Zoo "1" .. "*"  Lesson_6.Animals.Animal


}

@enduml